# golf-genius-mcp

./: .gitignore  CHANGELOG.md  README.md  TROUBLESHOOTING.md  main.py  pyproject.toml
.github/: copilot-instructions.md
tests/: test_main.py
